# passcrackai

./: .gitignore  Cargo.toml  README.md  datapreprocessing.py  main.py  password_strength_model.h5  password_strength_model_noDO.h5  password_strength_model_noDO2.h5
files/: entrypass.json  password_strength_model.onnx  passwordbank.txt
files/my_saved_model/: fingerprint.pb  saved_model.pb
files/my_saved_model/variables/: variables.data-00000-of-00001  variables.index
release/files/: entrypass.json
src/: appio.rs  interface.rs  login.rs  main.rs  passwordstrength.rs  setup.rs  strengthestimation.rs
src/interface/: datastore.rs
