[package]
name = "passwordmanager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.3"
rand = "0.8"
aes-gcm = "0.10"
base64 = "0.21"
serde = {version = "1.0", features = ["derive"]}
prettytable-rs = "0.10"
onnxruntime = "0.0.14"
anyhow = "1.0"
ndarray = "0.15"
hex = "0.4"
bincode = "1.3"