[package]
name = "passwordmanager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.26"
prettytable-rs = "0.10"
argon2 = "0.3"
rand = "0.8"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
aes-gcm = "0.10"
base64 = "0.13"